# diabatz

./: .gitignore  README.md  build.sh  rebuild.sh  theory.md
CNPI2point/: CMakeLists.txt  map.cpp
bound/: CMakeLists.txt  Hd.cpp  Hd.hpp  data.cpp  data.hpp  global.cpp  global.hpp  main.cpp
script/: check_duplicates.py  curve_orientation.py  filter_polynomial.py  remove_duplicates.py
test/: test.sh
test/Hderiva/: CMakeLists.txt  Hd.in  data.cpp  data.hpp  global.cpp  global.hpp  main.cpp
test/Hderiva/min-C1/: cartgrad-1.data  cartgrad-2.data
test/SAabinitio/: CMakeLists.txt  global.cpp  global.hpp  main.cpp
test/abinitio/: CMakeLists.txt  main.cpp
test/grad/: CMakeLists.txt  DcDqHd.cpp  DcHa.cpp  DcHc.cpp  DcHd.cpp  Dc_DqH_a.cpp  Dc_DqH_c.cpp  DqHa.cpp  DqHd.cpp  Hd.cpp  Hd.hpp  README.md  commutor.cpp  composite.cpp  main.cpp
test/grad/source/: Hd.cpp  commutor.cpp  commutor.hpp  main.cpp
test/grad/source/adiabatic/: DcHa.cpp  Dc_DqH_a.cpp  DqHa.cpp
test/grad/source/composite/: DcHc.cpp  Dc_DqH_c.cpp  composite.cpp
test/grad/source/diabatic/: DcDqHd.cpp  DcHd.cpp  DqHd.cpp
test/obnet/: 11.in  12.in  CMakeLists.txt  InputGenerator.cpp  InputGenerator.hpp  main.cpp
test/v0/: 1-Hd.net  1-opt.chk  1.in  10-Hd.net  10-opt.chk  12.in  2-Hd.net  2-opt.chk  23.in  24.in  3-Hd.net  3.in  (+21 more)
test/v0-deg/: Hd.net
test/v0-reg/: Hd.in
tools/: build.sh  rebuild.sh
tools/CNPI2point/: CMakeLists.txt  README.md  global.cpp  global.hpp  main.cpp  map.cpp
tools/CNPI2point/test/: log
tools/CNPI2point/test/min-Cs/: cartgrad-1.data
tools/Hessian/: CMakeLists.txt  README.md  main.cpp
tools/RMSD/: CMakeLists.txt  README.md  compare.cpp  global.cpp  global.hpp  main.cpp
tools/autoencoder/: CMakeLists.txt
tools/autoencoder/include/: global.hpp  train.hpp
tools/autoencoder/source/: Adam.cpp  SGD.cpp  global.cpp  main.cpp  trust_region.cpp
tools/autoencoder/test/: decoder.in  encoder.in
tools/cart2SASDIC/: CMakeLists.txt  main.cpp
tools/cart2SASIC/: CMakeLists.txt  main.cpp
tools/critics/: CMakeLists.txt  README.md
tools/critics/include/: Hd_extension.hpp  fixed_intcoord.hpp  global.hpp
tools/critics/source/: main.cpp
tools/critics/source/searchers/: mex.cpp  mex_adiabatic.cpp  mex_diabatic.cpp  minimum.cpp  minimum_adiabatic.cpp  minimum_diabatic.cpp  saddle.cpp  saddle_adiabatic.cpp  saddle_diabatic.cpp
tools/critics/source/utilities/: Hd_extension.cpp  fixed_intcoord.cpp  global.cpp
tools/critics/v0/: CMakeCache.txt  Makefile  cmake_install.cmake
tools/critics/v0-libadiabatz/: CMakeLists.txt  README.md  adiabatz.cpp
tools/gh/: CMakeLists.txt  README.md  main.cpp
tools/gh/v0/: CMakeCache.txt  Makefile  cmake_install.cmake
tools/v0/bin2txt/: CMakeLists.txt  main.cpp
tools/v0/critics/libadiabatz/: CMakeLists.txt
tools/v0/critics/libadiabatz/share/cmake/adiabatz/: adiabatzConfig.cmake
tools/v0/data-stats/: CMakeLists.txt
tools/v0/data-stats/include/: InputGenerator.hpp  data.hpp  data_classes.hpp  global.hpp
tools/v0/data-stats/source/: InputGenerator.cpp  data.cpp  data_classes.cpp  global.cpp  main.cpp  statisticize.cpp  statisticize_degset.cpp  statisticize_regset.cpp
tools/v0/eval/: CMakeLists.txt  main.cpp
tools/v0/libHd/: CMakeLists.txt  README.md
tools/v0/libHd/include/Hd/: InputGenerator.hpp  Kernel.hpp  kernel.hpp
tools/v0/libHd/share/cmake/Hd/: HdConfig.cmake
tools/v0/libHd/source/: InputGenerator.cpp  Kernel.cpp  kernel.cpp
tools/v0/rand-txt/: CMakeLists.txt  main.cpp
tools/v0/txt2bin/: CMakeLists.txt  main.cpp
tools/v0/vibration/: CMakeLists.txt  main.cpp
tools/v0/vibronics/: CMakeLists.txt  README.md  anion.xyz  final2init.cpp  int2normal.cpp  intcfl  main.cpp  read_Columbus.cpp  suggest_phonons.cpp
tools/v0/vibronics/anion/: Hd.in  anion-hessian  anion.xyz  continuum.txt  intcfl  log  shift-vector.txt  transformation-matrix.txt  vibronics.IntCoordDef
tools/v0/vibronics/anion/0.9/: .continuum.txt.swp  continuum.txt  phonons.txt
tools/v0/vibronics/anion/0.95/: continuum.txt  phonons.txt
tools/v0/vibronics/anion/0.99/: continuum.txt  phonons.txt
tools/v0/vibronics/anion/1/: continuum.txt  phonons.txt
tools/v0/vibronics/include/: CNPI.hpp  cart2int.hpp  routines.hpp
tools/v0/vibronics/source/: CNPI.cpp  cart2int.cpp  final2init.cpp  finalHess.cpp  initHess.cpp  int2normal.cpp  main.cpp  suggest_phonons.cpp
tools/v1/libHd/: CMakeLists.txt  README.md
tools/v1/libHd/include/Hd/: InputGenerator.hpp  Kernel.hpp  kernel.hpp
tools/v1/libHd/share/cmake/Hd/: HdConfig.cmake
tools/v1/libHd/source/: InputGenerator.cpp  Kernel.cpp  kernel.cpp
tools/vibration/: CMakeLists.txt  README.md  main.cpp
v0/: CMakeLists.txt  InputGenerator.cpp  Jacobian.cpp  README.md  data.cpp  data.hpp  global.cpp  global.hpp  main.cpp  residue.cpp  train.cpp  train.hpp
v0.0.0/: README.md  vibronics.md
v0.0.1/: CMakeLists.txt  README.md
v0.0.2/: CMakeLists.txt  README.md
v0.1.0/: README.md
v0.1.2/: CMakeLists.txt  README.md
v0.2.0/: CMakeLists.txt  README.md
v0.3.0/: README.md
v0.3.2/: CMakeLists.txt  README.md
v0/include/: data.hpp  global.hpp  train.hpp
v0/source/: InputGenerator.cpp  Jacobian.cpp  data.cpp  global.cpp  main.cpp  residue.cpp  train.cpp
v0/source/train/: Jacobian.cpp  common.cpp  common.hpp  driver.cpp
v0/source/train/torch_optim/: Adam.cpp  SGD.cpp  common.hpp  gradient.cpp  residue.cpp
v0/source/train/trust_region/: Jacobian.cpp  common.cpp  common.hpp  driver.cpp  initialize.cpp  residue.cpp
v0/source/trust_region/: Jacobian.cpp  common.cpp  common.hpp  driver.cpp  initialize.cpp  residue.cpp
v1/: README.md
v1.0.0/: CMakeLists.txt  README.md
v1.1.0/: README.md
v1.1.2/: CMakeLists.txt  README.md
v1.2.0/: README.md
v1.3.0/: CMakeLists.txt  README.md
v1.3.0/include/: data.hpp  data_classes.hpp
v1.3.0/source/: data.cpp  data_classes.cpp  main.cpp
v1.3.0/source/train/: Jacobian.cpp  common.hpp  residue.cpp
v1.3.2/: CMakeLists.txt  README.md
v1.3.3/: README.md
v2/: README.md
v2.0.0/: CMakeLists.txt  README.md
v2.0.0/source/train/: common.hpp
(+312 files in other folders)
